examples/test/testpolicy7501.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7501
  namespace: namespace195
spec:
  podSelector:
    matchLabels:
      key2: value13
      key11: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value11
          key37: value36
      podSelector:
        matchLabels:
          key26: value36
          key19: value20
